<resources>
    <string name="app_name">Postcards From Paris</string>
    <string name="user_image_description">User\'s Profile Picture</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="change_name">Change Name</string>
    <string name="change_profile_picture">Change Profile Picture</string>

    <string name="change_image">Change Photo</string>
    <string name="pick_image">Select Photo</string>

    <string name="postcard_picture">Postcard Picture</string>
</resources>
