<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/change_name"
            android:fontFamily="sans-serif-light"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:textColor="@color/colorTextLight"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>
    
    <EditText
            android:id="@+id/dialog_change_name_et_new_name"
            android:inputType="textPersonName"
            android:hint="New Name"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:textColor="@color/colorTextDark"
            android:background="@drawable/txt_rounded"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            tools:ignore="Autofill, HardcodedText"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/dialog_change_name_btn_cancel"
                android:text="@string/cancel"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/colorTextLight"
                android:background="@drawable/btn_rounded"
                android:layout_weight="1"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
                android:id="@+id/dialog_change_name_btn_save"
                android:text="@string/save"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/colorTextLight"
                android:background="@drawable/btn_rounded"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>